--- a/public/assets/css/scss/elements/theme-css.css
+++ b/public/assets/css/scss/elements/theme-css.css
@@ -9607,6 +9607,15 @@ header .flaticon-list {
   background-position: center !important;
   background-size: cover !important;
 }
+.slider.style_four .slide-item-content .image-layer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
 .slider.style_four .slide-item-content .auto-container {
   position: relative;
   z-index: 10;
@@ -9650,7 +9659,7 @@ header .flaticon-list {
   font-size: 17px;
   line-height: 27px;
   font-weight: 400;
-  color: var(--text-color-light);
+  color: white;
   margin-bottom: 30px;
   opacity: 1;
   transition: 0.9s ease-in-out;
